[package]
name = "flood-disaster-crawl"
version = "0.1.0"
description = "Crawl flood disaster information"
authors = ["Kittipos Wajakajornrit"]
edition = "2021"

[profile.release]
opt-level = 3

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde", "unstable-locales"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "macros",
    "sqlite",
    "chrono",
    "json",
] }
log = "0.4.22"
simplelog = "^0.12.0"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
openssl = { version = "0.10", features = ["vendored"] }
